ui(root): fix size logo to prevent laytou shift

--- a/src/components/shared/Logo/index.css
+++ b/src/components/shared/Logo/index.css
@@ -5,8 +5,8 @@
 }
 
 .Logo img {
-  width: 100%;
-  height: 100%;
+  aspect-ratio: 1;
+  background: transparent;
 }
 
 .Logo--small {
